[tool.poetry]
name = "data-visualization"
version = "0.1.0"
description = ""
authors = ["abdallah alabed <abd.alabed97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.3"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
